--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -1,7 +1,7 @@
 inherit_from:
   - .rubocop_airbnb.yml
 
-#以下にはrubocopで検証したくないフォルダを指定する
+# 以下にはrubocopで検証したくないフォルダを指定する
 AllCops:
   Exclude:
     - 'vendor/**/*'
@@ -12,3 +12,8 @@ AllCops:
     - 'config/initializers/*'
     - 'config/spring.rb'
     - 'config/routes.rb'
+
+# SystemSpecのexpect{}.to~ を使用する
+Style/BlockDelimiters:
+  Exclude:
+    - 'spec/**/*'
