circleciデータベース作成失敗の修正

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -16,10 +16,10 @@ jobs:
           command: sleep 1
       - run:
           name: "before_test: setup db"
-          command: docker-compose exec web rails db:create db:migrate
+          command: docker-compose run web rails db:create db:migrate
       - run:
           name: rspec
-          command: docker-compose exec web rspec
+          command: docker-compose run web rspec
       - run:
           name: rubocop
           command: bundle exec rubocop --parallel
