--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -15,14 +15,14 @@ jobs:
           name: sleep for waiting launch db
           command: sleep 1
       - run:
-          name: "before_test: setup db"
+          name: setup db
           command: docker-compose run web rails db:create db:migrate
       - run:
           name: rspec
-          command: docker-compose run web rspec
+          command: docker-compose exec web rspec
       - run:
           name: rubocop
-          command: bundle exec rubocop --parallel
+          command: docker-compose exec web rubocop
       - run:
           name: docker-compose down
           command: docker-compose down
