--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -7,7 +7,7 @@ jobs:
       - checkout
       - run:
           name: docker-compose build
-          command: docker-compose build --build-arg RAILS_MASTER_KEY=${RAILS_MASTER_KEY}
+          command: docker-compose build
       - run:
           name: docker-compose up
           command: docker-compose up -d
@@ -16,7 +16,7 @@ jobs:
           command: sleep 1
       - run:
           name: setup db
-          command: docker-compose run web rails db:create db:migrate
+          command: docker-compose run web rails db:create db:migrate RAILS_ENV=test
       - run:
           name: rspec
           command: docker-compose exec web rspec
