RAILS_MASTER_KEYの設定

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -9,6 +9,11 @@ jobs:
           name: docker-compose build
           command: docker-compose build
       - run:
+        name: 環境変数の設定
+        commnad: |
+          echo "${RAILS_MASTER_KEY}"
+          RAILS_MASTER_KEY = ${RAILS_MASTER_KEY}
+      - run:
           name: docker-compose up
           command: docker-compose up -d
       - run:
