--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -11,8 +11,7 @@ jobs:
       - run:
         name: 環境変数の設定
         commnad: |
-          echo "${RAILS_MASTER_KEY}"
-          RAILS_MASTER_KEY = ${RAILS_MASTER_KEY}
+          echo $RAILS_MASTER_KEY
       - run:
           name: docker-compose up
           command: docker-compose up -d
