--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,6 +3,8 @@ services:
   db:
     image: postgres
     environment:
+      POSTGRES_HOST: db
+      POSTGRES_USERNAME: postgres
       POSTGRES_PASSWORD: secret
     volumes:
       - ./tmp/db:/var/lib/postgresql/data
@@ -10,7 +12,7 @@ services:
     build: .
     command: bash -c "rm -f tmp/pids/server.pid && bundle exec rails s -p 3000 -b '0.0.0.0'"
     stdin_open: true
-    tty: true    
+    tty: true
     volumes:
       - .:/enjoy_backmusic
     ports:
