--- a/config/database.yml
+++ b/config/database.yml
@@ -23,7 +23,7 @@ default: &default
 
 development:
   <<: *default
-  database: enjoy_backmusic_development
+  database: enjoy_backmusic_development!
 
   # The specified database role being used to connect to postgres.
   # To create additional roles in postgres see `$ createuser --help`.
@@ -57,6 +57,7 @@ development:
 # Do not set this db to the same as development or production.
 test:
   <<: *default
+  host: <%= ENV.fetch("POSTGRES_HOST") { 'db' } %>
   database: enjoy_backmusic_test
 
 # As with config/secrets.yml, you never want to store sensitive information,
