--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,10 +3,7 @@ services:
   db:
     image: postgres
     environment:
-      POSTGRES_HOST: db
-      POSTGRES_USERNAME: postgres
       POSTGRES_PASSWORD: secret
-      RAILS_MASTER_KEY: ${RAILS_MASTER_KEY}
     volumes:
       - ./tmp/db:/var/lib/postgresql/data
   web:
@@ -18,5 +15,9 @@ services:
       - .:/enjoy_backmusic
     ports:
       - "3000:3000"
+    environment:
+      POSTGRES_HOST: db
+      POSTGRES_USERNAME: postgres
+      POSTGRES_PASSWORD: secret
     depends_on:
       - db
