--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -7,6 +7,9 @@ jobs:
     steps:
       - checkout
       - run:
+        name: Setup environment variable
+        command: echo "export COMPOSE_FILE=docker-compose.ci.yml" >> $BASH_ENV
+      - run:
           name: docker-compose build
           command: docker-compose build
       - run:
