--- a/docker-compose.ci.yml
+++ b/docker-compose.ci.yml
@@ -15,5 +15,7 @@ services:
       - .:/enjoy_backmusic
     ports:
       - "3000:3000"
+    environment:
+      RAILS_MASTER_KEY: ${RAILS_MASTER_KEY}
     depends_on:
       - db
